--- a/src/Cle.SemanticAnalysis/Cle.SemanticAnalysis.csproj
+++ b/src/Cle.SemanticAnalysis/Cle.SemanticAnalysis.csproj
@@ -10,5 +10,9 @@
     <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
     <PackageReference Include="System.Memory" Version="4.5.1" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\Cle.Parser\Cle.Parser.csproj" />
+  </ItemGroup>
 
 </Project>
