Fix a missing project reference
This somehow didn't act up before now.

--- a/test/Cle.Compiler.UnitTests/Cle.Compiler.UnitTests.csproj
+++ b/test/Cle.Compiler.UnitTests/Cle.Compiler.UnitTests.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Cle.Compiler\Cle.Compiler.csproj" />
+    <ProjectReference Include="..\..\src\Cle.SemanticAnalysis\Cle.SemanticAnalysis.csproj" />
   </ItemGroup>
 
 </Project>
