--- a/src/Cle.Frontend/Cle.Frontend.csproj
+++ b/src/Cle.Frontend/Cle.Frontend.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.3.0" />
     <PackageReference Include="JetBrains.Annotations" Version="2018.2.1" />
   </ItemGroup>
   
