Hook up codegen to the compiler

--- a/src/Cle.Compiler/Cle.Compiler.csproj
+++ b/src/Cle.Compiler/Cle.Compiler.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
   
   <ItemGroup>
+    <ProjectReference Include="..\Cle.CodeGeneration\Cle.CodeGeneration.csproj" />
     <ProjectReference Include="..\Cle.Common\Cle.Common.csproj" />
     <ProjectReference Include="..\Cle.Parser\Cle.Parser.csproj" />
     <ProjectReference Include="..\Cle.SemanticAnalysis\Cle.SemanticAnalysis.csproj" />
