Implement just enough lowering to return 42

--- a/test/Cle.UnitTests.Common/Cle.UnitTests.Common.csproj
+++ b/test/Cle.UnitTests.Common/Cle.UnitTests.Common.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Cle.Common\Cle.Common.csproj" />
+    <ProjectReference Include="..\..\src\Cle.SemanticAnalysis\Cle.SemanticAnalysis.csproj" />
   </ItemGroup>
 
 </Project>
