--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,11 @@
 trigger:
-- master
+  branches:
+    include:
+    - master
+    - release/*
+  paths:
+    exclude:
+    - docs/*
 
 pool:
   vmImage: 'vs2017-win2016'
@@ -11,7 +17,7 @@ variables:
 steps:
 - task: DotNetCoreInstaller@0
   inputs:
-    version: '2.2.101'
+    version: '2.2.104'
   displayName: 'Install .Net Core 2.2 SDK' # Needed for test filtering
 - script: |
     dotnet tool install --tool-path . nbgv
@@ -21,8 +27,11 @@ steps:
     dotnet build --configuration $(configuration)
   displayName: 'Build Release'
 - script: |
-    dotnet test --configuration $(configuration) --logger trx --collect "Code coverage"
-  displayName: 'Run tests'
+    dotnet test --configuration $(configuration) --logger trx --collect "Code Coverage" --filter "FullyQualifiedName~UnitTests"
+  displayName: 'Run unit tests'
+- script: |
+    dotnet test --configuration Release --logger trx test/Cle.IntegrationTests/Cle.IntegrationTests.csproj
+  displayName: 'Run integration tests' # Code coverage hangs/crashes the Cle-compiled executables
 - script: |
     dotnet publish src/Cle.Frontend --configuration $(configuration) --output $(Build.ArtifactStagingDirectory)
   displayName: 'Package Cle.Frontend'
