--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,7 @@ steps:
 - task: ArchiveFiles@2
   inputs:
     rootFolderOrFile: '$(Build.ArtifactStagingDirectory)'
-    archiveFile: '$(Build.ArtifactStagingDirectory)/cle-$(Build.BuildId).zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/cle-$(Build.BuildNumber).zip'
   displayName: 'Create .zip file'
 - task: PublishBuildArtifacts@1
   displayName: 'Publish build artifacts'
