--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,6 +33,7 @@ steps:
 - task: ArchiveFiles@2
   inputs:
     rootFolderOrFile: '$(Build.ArtifactStagingDirectory)'
+    includeRootFolder: false
     archiveFile: '$(Build.ArtifactStagingDirectory)/cle-$(Build.BuildNumber).zip'
   displayName: 'Create .zip file'
 - task: PublishBuildArtifacts@1
