--- a/src/Cle.Common/Cle.Common.csproj
+++ b/src/Cle.Common/Cle.Common.csproj
@@ -3,10 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>8.0</LangVersion>
+    <NullableContextOptions>enable</NullableContextOptions>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="JetBrains.Annotations" Version="2018.2.1" />
-  </ItemGroup>
 
 </Project>
