--- a/test/Cle.UnitTests.Common/Cle.UnitTests.Common.csproj
+++ b/test/Cle.UnitTests.Common/Cle.UnitTests.Common.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <LangVersion>8.0</LangVersion>
+    <NullableContextOptions>enable</NullableContextOptions>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
