--- a/src/Cle.Compiler/Cle.Compiler.csproj
+++ b/src/Cle.Compiler/Cle.Compiler.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>8.0</LangVersion>
+    <NullableContextOptions>enable</NullableContextOptions>
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="JetBrains.Annotations" Version="2018.2.1" />
     <PackageReference Include="System.Memory" Version="4.5.1" />
   </ItemGroup>
   
