--- a/src/Cle.Frontend/Cle.Frontend.csproj
+++ b/src/Cle.Frontend/Cle.Frontend.csproj
@@ -4,12 +4,12 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <LangVersion>8.0</LangVersion>
+    <NullableContextOptions>enable</NullableContextOptions>
     <AssemblyName>cle</AssemblyName>
   </PropertyGroup>
   
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.3.0" />
-    <PackageReference Include="JetBrains.Annotations" Version="2018.2.1" />
   </ItemGroup>
   
   <ItemGroup>
