--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,14 +23,18 @@ steps:
     .\nbgv cloud
   displayName: 'Install NerdBank.GitVersioning'
 - script: |
+    echo '##vso[task.setvariable variable=sonar_pr] /d:sonar.pullrequest.key=($System.PullRequest.PullRequestNumber) /d:sonar.pullrequest.branch="$(Build.SourceBranch)"'
+  condition: ne(variables['Build.SourceBranch'], 'refs/heads/master')
+  displayName: 'Set PR properties for Sonar'
+- script: |
     dotnet tool install --tool-path . dotnet-sonarscanner
-    .\dotnet-sonarscanner begin /k:"polsys_cle" /v:"$(buildId)" /o:"polsys-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$(SONAR_TOKEN)" /d:sonar.cs.opencover.reportsPaths="**\coverage.opencover.xml"
+    .\dotnet-sonarscanner begin /k:"polsys_cle" /v:"$(Build.BuildNumber)" /o:"polsys-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$(SONAR_TOKEN)" $(sonar_pr)
   displayName: 'Install SonarScanner'
 - script: |
     dotnet build --configuration $(configuration)
   displayName: 'Build Release'
 - script: |
-    dotnet test --configuration $(configuration) --logger trx --collect "Code Coverage" --filter "FullyQualifiedName~UnitTests" /p:CoverletOutputFormat=opencover
+    dotnet test --configuration $(configuration) --logger trx --collect "Code Coverage" --filter "FullyQualifiedName~UnitTests"
   displayName: 'Run unit tests'
 - script: |
     dotnet test --configuration Release --logger trx test/Cle.IntegrationTests/Cle.IntegrationTests.csproj
