--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ steps:
     .\nbgv cloud
   displayName: 'Install NerdBank.GitVersioning'
 - script: |
-    echo '##vso[task.setvariable variable=sonar_pr] /d:sonar.pullrequest.key=($System.PullRequest.PullRequestNumber) /d:sonar.pullrequest.branch="$(Build.SourceBranch)"'
+    echo '##vso[task.setvariable variable=sonar_pr] /d:sonar.pullrequest.key=$(System.PullRequest.PullRequestNumber) /d:sonar.pullrequest.branch="$(Build.SourceBranch)" /d:sonar.pullrequest.base="$(System.PullRequest.TargetBranch)"'
   condition: ne(variables['Build.SourceBranch'], 'refs/heads/master')
   displayName: 'Set PR properties for Sonar'
 - script: |
