--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,13 +23,21 @@ steps:
     .\nbgv cloud
   displayName: 'Install NerdBank.GitVersioning'
 - script: |
+    echo '##vso[task.setvariable variable=sonar_pr] /d:sonar.pullrequest.key=$(System.PullRequest.PullRequestNumber) /d:sonar.pullrequest.branch="$(Build.SourceBranch)" /d:sonar.pullrequest.base="$(System.PullRequest.TargetBranch)"'
+  condition: ne(variables['Build.SourceBranch'], 'refs/heads/master')
+  displayName: 'Set PR properties for Sonar'
+- script: |
+    dotnet tool install --tool-path . dotnet-sonarscanner
+    .\dotnet-sonarscanner begin /k:"polsys_cle" /v:"$(Build.BuildNumber)" /o:"polsys-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$(SONAR_TOKEN)" $(sonar_pr)
+  displayName: 'Install SonarScanner'
+- script: |
     dotnet build --configuration $(configuration)
   displayName: 'Build Release'
 - script: |
-    dotnet test --configuration $(configuration) --logger trx --collect "Code Coverage" --filter "FullyQualifiedName~UnitTests"
+    dotnet test --configuration $(configuration) --no-build --logger trx --collect "Code Coverage" --filter "FullyQualifiedName~UnitTests"
   displayName: 'Run unit tests'
 - script: |
-    dotnet test --configuration Release --logger trx test/Cle.IntegrationTests/Cle.IntegrationTests.csproj
+    dotnet test --configuration Release --no-build --logger trx test/Cle.IntegrationTests/Cle.IntegrationTests.csproj
   displayName: 'Run integration tests' # Code coverage hangs/crashes the Cle-compiled executables
 - script: |
     dotnet publish src/Cle.Frontend --configuration $(configuration) --output $(Build.ArtifactStagingDirectory)
@@ -48,3 +56,7 @@ steps:
     testRunner: VSTest
     testResultsFiles: '**/*.trx'
   displayName: 'Publish test results'
+- script: |
+    .\dotnet-sonarscanner end /d:sonar.login="$(SONAR_TOKEN)"
+  condition: succeededOrFailed()
+  displayName: 'Publish SonarScanner results'
