--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,10 @@ steps:
   condition: ne(variables['Build.SourceBranch'], 'refs/heads/master')
   displayName: 'Set PR properties for Sonar'
 - script: |
+    echo '##vso[task.setvariable variable=sonar_pr] '
+  condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
+  displayName: 'Set CI properties for Sonar'
+- script: |
     dotnet tool install --tool-path . dotnet-sonarscanner
     .\dotnet-sonarscanner begin /k:"polsys_cle" /v:"$(Build.BuildNumber)" /o:"polsys-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$(SONAR_TOKEN)" $(sonar_pr)
   displayName: 'Install SonarScanner'
