--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,11 @@ steps:
   inputs:
     version: '3.0.x'
   displayName: 'Install .NET Core 3.0 SDK'
+- task: UseDotNet@2
+  inputs:
+    version: '2.1.x'
+    packageType: runtime
+  displayName: 'Install .NET Core 2.1 runtime for SonarScanner'
 - script: |
     dotnet tool install --tool-path . nbgv
     .\nbgv cloud
